# rs2-misc-tools-notes

./: .gitignore  CMakePresets.json  CMakelists.txt  LICENSE  README.md  Safelist.mut  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-build.yml
docs/: RS2Tools.md
patches/server_2025_04/: check_worldtime.asm  check_worldtime_x64dbg.txt  switcheroo.asm  switcheroo_x64dbg.txt
patches/server_2025_09/: check_worldtime.asm  full_patch.1337  switcheroo_x64dbg.txt
server_2025_april/: check_worldtime.asm  check_worldtime_x64dbg.txt  full_patch.1337  log_custom.asm  log_custom_x64dbg.txt
server_2025_september/: check_worldtime.asm  check_worldtime_x64dbg.txt  full_patch.1337  log_custom.asm  log_custom_msg_bytes_x64dbg.txt  log_custom_x64dbg.txt  switcheroo.asm
src/: CMakeLists.txt  Main.cpp  RS2Tools.hpp
src/Crypto/: CMakeLists.txt  CMakelists.txt  Crypto.cpp  Crypto.hpp
src/Safelist/: CMakeLists.txt  Safelist.cpp  Safelist.hpp
tests/: CMakeLists.txt  TestCrypto.cpp
tests/data/: TKLMutator.u
vcpkg/triplets/: x64-linux-custom.cmake  x64-windows-custom.cmake
